--- a/Trainers/mlp_mixer_trainer.ipynb
+++ b/Trainers/mlp_mixer_trainer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,6 +10,9 @@
     "sys.path.insert(0, './../Models')\n",
     "\n",
     "from mlp_mixer import MLPMixer\n",
+    "from imagenet1k_dataloader import get_imagenet_loaders\n",
+    "imagenet1k_data_dir = \"./../Data/imagenet1k\"\n",
+    "\n",
     "import numpy as np\n",
     "import torch\n",
     "from torchvision import datasets, transforms\n",
@@ -18,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,26 +70,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/0d/v0qrrszd3395__m529hc_8800000gn/T/ipykernel_9275/1611322628.py:23: UserWarning: The use of `x.T` on tensors of dimension other than 2 to reverse their shape is deprecated and it will throw an error in a future release. Consider `x.mT` to transpose batches of matrices or `x.permute(*torch.arange(x.ndim - 1, -1, -1))` to reverse the dimensions of a tensor. (Triggered internally at /Users/runner/work/pytorch/pytorch/pytorch/aten/src/ATen/native/TensorShape.cpp:3618.)\n",
-      "  new_state_dict[new_key] = torch.tensor(state_dict[key], dtype = torch.float32).T\n"
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: './../Weights/imagenet21k-Mixer-B_16.npz'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m/home/staditya/Desktop/Pushkal/MLP-Mixer/Trainers/mlp_mixer_trainer.ipynb Cell 4\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/staditya/Desktop/Pushkal/MLP-Mixer/Trainers/mlp_mixer_trainer.ipynb#W3sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m google_weights \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39;49mload(\u001b[39m\"\u001b[39;49m\u001b[39m./../Weights/imagenet21k-Mixer-B_16.npz\u001b[39;49m\u001b[39m\"\u001b[39;49m, allow_pickle \u001b[39m=\u001b[39;49m \u001b[39mTrue\u001b[39;49;00m)\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/staditya/Desktop/Pushkal/MLP-Mixer/Trainers/mlp_mixer_trainer.ipynb#W3sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m new_weights \u001b[39m=\u001b[39m convert_keys(google_weights)\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/staditya/Desktop/Pushkal/MLP-Mixer/Trainers/mlp_mixer_trainer.ipynb#W3sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m net\u001b[39m.\u001b[39mload_state_dict(new_weights, strict \u001b[39m=\u001b[39m \u001b[39mFalse\u001b[39;00m)\n",
+      "File \u001b[0;32m~/miniconda3/envs/MLP_mixer/lib/python3.10/site-packages/numpy/lib/npyio.py:427\u001b[0m, in \u001b[0;36mload\u001b[0;34m(file, mmap_mode, allow_pickle, fix_imports, encoding, max_header_size)\u001b[0m\n\u001b[1;32m    425\u001b[0m     own_fid \u001b[39m=\u001b[39m \u001b[39mFalse\u001b[39;00m\n\u001b[1;32m    426\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m--> 427\u001b[0m     fid \u001b[39m=\u001b[39m stack\u001b[39m.\u001b[39menter_context(\u001b[39mopen\u001b[39;49m(os_fspath(file), \u001b[39m\"\u001b[39;49m\u001b[39mrb\u001b[39;49m\u001b[39m\"\u001b[39;49m))\n\u001b[1;32m    428\u001b[0m     own_fid \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m\n\u001b[1;32m    430\u001b[0m \u001b[39m# Code to distinguish from NumPy binary files and pickles.\u001b[39;00m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: './../Weights/imagenet21k-Mixer-B_16.npz'"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<All keys matched successfully>"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -94,6 +91,13 @@
     "new_weights = convert_keys(google_weights)\n",
     "net.load_state_dict(new_weights, strict = False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
