--- a/Trainers/mixer_imagenet1k_accuracy.ipynb
+++ b/Trainers/mixer_imagenet1k_accuracy.ipynb
@@ -81,7 +81,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_154464/1611322628.py:23: UserWarning: The use of `x.T` on tensors of dimension other than 2 to reverse their shape is deprecated and it will throw an error in a future release. Consider `x.mT` to transpose batches of matrices or `x.permute(*torch.arange(x.ndim - 1, -1, -1))` to reverse the dimensions of a tensor. (Triggered internally at ../aten/src/ATen/native/TensorShape.cpp:3614.)\n",
+      "/tmp/ipykernel_4192/1611322628.py:23: UserWarning: The use of `x.T` on tensors of dimension other than 2 to reverse their shape is deprecated and it will throw an error in a future release. Consider `x.mT` to transpose batches of matrices or `x.permute(*torch.arange(x.ndim - 1, -1, -1))` to reverse the dimensions of a tensor. (Triggered internally at ../aten/src/ATen/native/TensorShape.cpp:3614.)\n",
       "  new_state_dict[new_key] = torch.tensor(state_dict[key], dtype = torch.float32).T\n"
      ]
     },
@@ -112,7 +112,7 @@
     "test_size = 0.000001\n",
     "batch_size = 32\n",
     "\n",
-    "train_loader, test_loader = get_imagenet_loaders(imagenet1k_data_dir, test_size = test_size, shuffle = False, batch_size = 32)"
+    "train_loader, test_loader = get_imagenet_loaders(imagenet1k_data_dir, test_size = test_size, shuffle = True, batch_size = 32)"
    ]
   },
   {
@@ -124,7 +124,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Performing Inference:   6%|▌         | 184/3125 [00:50<14:07,  3.47it/s, accuracy=1.92]"
+      "Inference: 100%|██████████| 3125/3125 [16:38<00:00,  3.13it/s, accuracy=36.1]\n"
      ]
     }
    ],
@@ -143,7 +143,8 @@
     "    \n",
     "    tqdm_loader.set_postfix(accuracy = 100 * accuracy)\n",
     "    tqdm_loader.update(1)\n",
-    "tqdm_loader.close()"
+    "tqdm_loader.close()\n",
+    "print(f\"Accuracy: {accuracy * 100}%\")"
    ]
   }
  ],
