--- a/Experiments/mixer_imagenet1k_accuracy.ipynb
+++ b/Experiments/mixer_imagenet1k_accuracy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,12 +23,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# B/16 architecture\n",
-    "device = torch.device(\"cuda\")\n",
+    "device = torch.device(\"cuda\") if torch.cuda.is_available() else torch.device(\"cpu\")\n",
+    "print(device)\n",
     "net = MLPMixer(in_channels = 3,\n",
     "               dim = 768,\n",
     "               num_classes = 1000,\n",
@@ -42,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,37 +75,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_4192/1611322628.py:23: UserWarning: The use of `x.T` on tensors of dimension other than 2 to reverse their shape is deprecated and it will throw an error in a future release. Consider `x.mT` to transpose batches of matrices or `x.permute(*torch.arange(x.ndim - 1, -1, -1))` to reverse the dimensions of a tensor. (Triggered internally at ../aten/src/ATen/native/TensorShape.cpp:3614.)\n",
-      "  new_state_dict[new_key] = torch.tensor(state_dict[key], dtype = torch.float32).T\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<All keys matched successfully>"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "google_weights = np.load(\"./../Weights/imagenet1k_Mixer-B_16.npz\", allow_pickle = True)\n",
+    "google_weights = np.load(\"./../Weights/imagenet1k-Mixer-B_16.npz\", allow_pickle = True)\n",
     "new_weights = convert_keys(google_weights)\n",
     "net.load_state_dict(new_weights, strict = False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,17 +99,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Inference: 100%|██████████| 3125/3125 [16:38<00:00,  3.13it/s, accuracy=36.1]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "accuracy = 0\n",
     "tqdm_loader = tqdm(train_loader, desc = \"Inference\", position = 0, leave = True)\n",
