--- a/Experiments/mixer_imagenet1k_accuracy.ipynb
+++ b/Experiments/mixer_imagenet1k_accuracy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,9 +23,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cuda\n"
+     ]
+    }
+   ],
    "source": [
     "# B/16 architecture\n",
     "device = torch.device(\"cuda\") if torch.cuda.is_available() else torch.device(\"cpu\")\n",
@@ -43,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,9 +83,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_20545/1611322628.py:23: UserWarning: The use of `x.T` on tensors of dimension other than 2 to reverse their shape is deprecated and it will throw an error in a future release. Consider `x.mT` to transpose batches of matrices or `x.permute(*torch.arange(x.ndim - 1, -1, -1))` to reverse the dimensions of a tensor. (Triggered internally at ../aten/src/ATen/native/TensorShape.cpp:3614.)\n",
+      "  new_state_dict[new_key] = torch.tensor(state_dict[key], dtype = torch.float32).T\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<All keys matched successfully>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "google_weights = np.load(\"./../Weights/imagenet1k-Mixer-B_16.npz\", allow_pickle = True)\n",
     "new_weights = convert_keys(google_weights)\n",
@@ -86,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,14 +121,40 @@
     "test_size = 0.000001\n",
     "batch_size = 32\n",
     "\n",
-    "train_loader, test_loader = get_imagenet_loaders(imagenet1k_data_dir, test_size = test_size, shuffle = True, batch_size = 32)"
+    "train_loader, test_loader = get_imagenet_loaders(imagenet1k_data_dir, \n",
+    "                                                 test_size = test_size, \n",
+    "                                                 shuffle = True, \n",
+    "                                                 batch_size = 32, \n",
+    "                                                 device = device)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Inference: 100%|██████████| 3125/3125 [14:31<00:00,  3.58it/s, accuracy=36.1]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 36.13400000002206%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "accuracy = 0\n",
     "tqdm_loader = tqdm(train_loader, desc = \"Inference\", position = 0, leave = True)\n",
