Added CIFAR10 downstream training

--- a/Experiments/mixer_imagenet1k_accuracy.ipynb
+++ b/Experiments/mixer_imagenet1k_accuracy.ipynb
@@ -55,7 +55,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def convert_keys(state_dict):\n",
+    "def convert_keys(state_dict, map_classifier, num_classes = 10):\n",
     "    keys = state_dict.keys()\n",
     "    new_keys = []\n",
     "    new_state_dict = {}\n",
@@ -76,8 +76,21 @@
     "        new_key = new_key.replace(\"pre_head.0_layer_norm\", \"pre_head_layer_norm\")\n",
     "        new_keys.append(new_key)\n",
     "    \n",
-    "    for (key, new_key) in zip(keys, new_keys):\n",
-    "        new_state_dict[new_key] = torch.tensor(state_dict[key], dtype = torch.float32).T\n",
+    "    if map_classifier:\n",
+    "        for (key, new_key) in zip(keys, new_keys): \n",
+    "            new_state_dict[new_key] = torch.tensor(state_dict[key], dtype = torch.float32).T\n",
+    "    else:\n",
+    "        for (key, new_key) in zip(keys, new_keys):\n",
+    "            weights = torch.tensor(state_dict[key], dtype = torch.float32).T\n",
+    "            if \"head.\" in new_key:\n",
+    "                k = np.random.randint(0, weights.shape[0], num_classes)\n",
+    "                # For bias\n",
+    "                if len(weights.shape) == 1:\n",
+    "                    weights = weights[k]\n",
+    "                # For weights\n",
+    "                else:\n",
+    "                    weights = weights[k, :]\n",
+    "            new_state_dict[new_key] = weights\n",
     "    return new_state_dict"
    ]
   },
@@ -107,7 +120,7 @@
    ],
    "source": [
     "google_weights = np.load(\"./../Weights/imagenet1k-Mixer-B_16.npz\", allow_pickle = True)\n",
-    "new_weights = convert_keys(google_weights)\n",
+    "new_weights = convert_keys(google_weights, map_classifier = True, num_classes = 1000)\n",
     "net.load_state_dict(new_weights, strict = False)"
    ]
   },
