--- a/Experiments/mixer_cifar10_train.ipynb
+++ b/Experiments/mixer_cifar10_train.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,17 +22,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "cuda\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "device = torch.device(\"cuda\") if torch.cuda.is_available() else torch.device(\"cpu\")\n",
     "print(device)"
@@ -40,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,18 +77,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_39178/929378902.py:27: UserWarning: The use of `x.T` on tensors of dimension other than 2 to reverse their shape is deprecated and it will throw an error in a future release. Consider `x.mT` to transpose batches of matrices or `x.permute(*torch.arange(x.ndim - 1, -1, -1))` to reverse the dimensions of a tensor. (Triggered internally at ../aten/src/ATen/native/TensorShape.cpp:3614.)\n",
-      "  weights = torch.tensor(state_dict[key], dtype = torch.float32).T\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# B/16 architecture\n",
     "net = MLPMixer(in_channels = 3,\n",
@@ -119,18 +102,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Files already downloaded and verified\n",
-      "Files already downloaded and verified\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "data_dir = \"./../Data\"\n",
     "batch_size = 32\n",
@@ -152,17 +126,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Train Epoch 1:   3%|▎         | 48/1563 [00:24<23:03,  1.10it/s, train_acc=0.00382, train_loss=0.0715]"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "epochs = 10\n",
     "train_losses, test_losses = [], []\n",
@@ -178,9 +144,11 @@
     "        loss_ = loss(y_hat, y)\n",
     "        loss_.backward()\n",
     "        optimizer.step()\n",
-    "        train_loss += loss_.item() / len(train_loader)\n",
-    "        train_acc += (y_hat.argmax(1) == y).sum().item() / len(train_dataset)\n",
-    "        tqdm_train_loader.set_postfix(train_loss = train_loss, train_acc = train_acc)\n",
+    "        t_loss = loss_.item()\n",
+    "        t_acc = (y_hat.argmax(1) == y).sum().item()\n",
+    "        train_loss += t_loss / len(train_loader)\n",
+    "        train_acc += t_acc / len(train_dataset)\n",
+    "        tqdm_train_loader.set_postfix(train_loss = t_loss, train_acc = t_acc)\n",
     "    train_losses.append(train_loss)\n",
     "    train_accs.append(train_acc)\n",
     "\n",
@@ -190,9 +158,11 @@
     "    for (x, y) in tqdm_test_loader:\n",
     "        y_hat = non_linearity(net(x))\n",
     "        loss_ = loss(y_hat, y)\n",
-    "        test_loss += loss_.item() / len(test_loader)\n",
-    "        test_acc += (y_hat.argmax(1) == y).sum().item() / len(test_dataset)\n",
-    "        tqdm_test_loader.set_postfix(test_loss = test_loss, test_acc = test_acc)\n",
+    "        t_loss = loss_.item()\n",
+    "        t_acc = (y_hat.argmax(1) == y).sum().item()\n",
+    "        test_loss += t_loss / len(test_loader)\n",
+    "        test_acc += t_acc / len(test_dataset)\n",
+    "        tqdm_test_loader.set_postfix(test_loss = t_loss, test_acc = t_acc)\n",
     "    test_losses.append(test_loss)\n",
     "    test_accs.append(test_acc)\n",
     "    print(f\"Epoch {epoch + 1} | Train Loss {train_loss:.4f} | Train Acc {train_acc:.4f} | Test Loss {test_loss:.4f} | Test Acc {test_acc:.4f}\")"
