Added training notebook on CIFAR10

--- a/Experiments/mixer_cifar10_train.ipynb
+++ b/Experiments/mixer_cifar10_train.ipynb
@@ -9,8 +9,9 @@
     "import sys\n",
     "sys.path.insert(0, './../Models')\n",
     "from mlp_mixer import MLPMixer\n",
-    "from tqdm import tqdm\n",
     "import numpy as np\n",
+    "from tqdm import tqdm\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "import torch\n",
     "import torch.nn as nn\n",
@@ -166,6 +167,30 @@
     "    test_losses.append(test_loss)\n",
     "    test_accs.append(test_acc)\n",
     "    print(f\"Epoch {epoch + 1} | Train Loss {train_loss:.4f} | Train Acc {train_acc:.4f} | Test Loss {test_loss:.4f} | Test Acc {test_acc:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.subplot(1, 2, 1)\n",
+    "plt.plot(np.arange(epochs) + 1, train_losses, label = \"Train Loss\")\n",
+    "plt.plot(np.arange(epochs) + 1, test_losses, label = \"Test Loss\")\n",
+    "plt.xlabel(\"Epochs\")\n",
+    "plt.ylabel(\"Loss\")\n",
+    "plt.legend()\n",
+    "\n",
+    "plt.subplot(1, 2, 2)\n",
+    "plt.plot(np.arange(epochs) + 1, train_accs, label = \"Train Accuracy\")\n",
+    "plt.plot(np.arange(epochs) + 1, test_accs, label = \"Test Accuracy\")\n",
+    "plt.xlabel(\"Epochs\")\n",
+    "plt.ylabel(\"Accuracy\")\n",
+    "plt.legend()\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
    ]
   }
  ],
