--- a/Experiments/mixer_cifar10_train.ipynb
+++ b/Experiments/mixer_cifar10_train.ipynb
@@ -97,7 +97,7 @@
     "net.load_state_dict(new_weights, strict = False)\n",
     "\n",
     "non_linearity = nn.Softmax(dim = 1)\n",
-    "optimizer = torch.optim.Adam(net.parameters(), lr = 0.001)\n",
+    "optimizer = torch.optim.Adam(net.parameters(), lr = 0.1)\n",
     "loss = nn.CrossEntropyLoss()"
    ]
   },
@@ -113,8 +113,7 @@
     "\n",
     "transform = T.Compose([\n",
     "            T.Resize(224),\n",
-    "            T.ToTensor(),\n",
-    "            T.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225])])\n",
+    "            T.ToTensor()])\n",
     "\n",
     "train_dataset = CIFAR10(root = data_dir, train = True, transform = transform, download = True)\n",
     "test_dataset = CIFAR10(root = data_dir, train = False, transform = transform, download = True)\n",
