--- a/Experiments/mixer_imagenet1k_TSNE_plots.ipynb
+++ b/Experiments/mixer_imagenet1k_TSNE_plots.ipynb
@@ -95,7 +95,7 @@
     "               token_dim = 384,\n",
     "               channel_dim = 3072).to(device)\n",
     "\n",
-    "google_weights = np.load(\"./../Weights/imagenet1k-Mixer-B_16.npz\", allow_pickle = True)\n",
+    "google_weights = np.load(\"./../Weights/imagenet21k_Mixer-B_16.npz\", allow_pickle = True)\n",
     "new_weights = convert_keys(google_weights, map_classifier = True)\n",
     "\n",
     "net.load_state_dict(new_weights, strict = False)"
@@ -108,7 +108,7 @@
    "outputs": [],
    "source": [
     "class Identity(nn.Module):\n",
-    "    def __init__(self):Inference\n",
+    "    def __init__(self):\n",
     "        super(Identity, self).__init__()\n",
     "        \n",
     "    def forward(self, x):\n",
@@ -131,7 +131,7 @@
     "train_loader, test_loader = get_imagenet_loaders(imagenet1k_data_dir, \n",
     "                                                 test_size = test_size, \n",
     "                                                 shuffle = True, \n",
-    "                                                 batch_size = 32, \n",
+    "                                                 batch_size = batch_size, \n",
     "                                                 device = device)"
    ]
   },
@@ -182,7 +182,7 @@
     "f, ax = plt.subplots(figsize = (12, 8))\n",
     "points = ax.scatter(features[:, 0], features[:, 1], c = labels.numpy(), s = 30, cmap = cmap)\n",
     "f.colorbar(points)\n",
-    "plt.savefig(\"./../Plots/Imagenet1k_imagenet1kweights_TSNE.png\")\n",
+    "plt.savefig(\"./../Plots/Imagenet1k_imagenet21kweights_TSNE.png\")\n",
     "plt.show()"
    ]
   }
